some website dependency updates

--- a/website/package.json
+++ b/website/package.json
@@ -14,14 +14,14 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.18",
-    "@docusaurus/preset-classic": "^2.0.0-beta.18",
-    "@gvarnavi/lattice-vibrations-lj": "https://api.observablehq.com/d/6e0bd14519e69ae6.tgz?v=3",
-    "@gvarnavi/lennard-jones-potential": "https://api.observablehq.com/d/47b6948443d96383.tgz?v=3",
-    "@gvarnavi/molecular-dynamics-lj": "https://api.observablehq.com/d/e5be4773dba2e95b.tgz?v=3",
-    "@gvarnavi/surfarce-energy-lj": "https://api.observablehq.com/d/9de37462d00fe937.tgz?v=3",
+    "@docusaurus/core": "^2.3.0",
+    "@docusaurus/preset-classic": "^2.3.0",
+    "@gvarnavi/lattice-vibrations-lj": "https://api.observablehq.com/@gvarnavi/lattice-vibrations-lj.tgz?v=3",
+    "@gvarnavi/lennard-jones-potential": "https://api.observablehq.com/@gvarnavi/lennard-jones-potential.tgz?v=3",
+    "@gvarnavi/molecular-dynamics-lj": "https://api.observablehq.com/@gvarnavi/molecular-dynamics-lj.tgz?v=3",
+    "@gvarnavi/surfarce-energy-lj": "https://api.observablehq.com/@gvarnavi/surfarce-energy-lj.tgz?v=3",
     "@mdx-js/react": "^1.6.21",
-    "@observablehq/runtime": "4",
+    "@observablehq/runtime": "5",
     "axios": "^0.25.0",
     "clsx": "^1.1.1",
     "katex": "^0.15.2",
